NULL =

public_icons_themes = hicolor

dist_noinst_DATA =

if BUILD_AISLERIOT
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-aisleriot.png \
	$(NULL)

if HAVE_HILDON

# These sizes work for maemo3 at least. The "scalable" icon really
# is a 64x54 icon, which is the size that apparently is required for
# the app menu on maemo3.
#
# FIXME: check which sizes are required on maemo4 and maemo5

dist_noinst_DATA += \
	hicolor_apps_34x34_mate-aisleriot.png \
	hicolor_apps_26x26_mate-aisleriot.png \
	hicolor_apps_40x40_mate-aisleriot.png \
	hicolor_apps_50x50_mate-aisleriot.png \
	hicolor_apps_scalable_mate-aisleriot.png \
	$(NULL)
else
dist_noinst_DATA += \
	hicolor_apps_22x22_mate-aisleriot.png \
	hicolor_apps_24x24_mate-aisleriot.png \
	hicolor_apps_32x32_mate-aisleriot.png \
	hicolor_apps_48x48_mate-aisleriot.png \
	hicolor_apps_scalable_mate-aisleriot.svg \
	hicolor_apps_16x16_mate-freecell.png \
	hicolor_apps_22x22_mate-freecell.png \
	hicolor_apps_24x24_mate-freecell.png \
	hicolor_apps_32x32_mate-freecell.png \
	hicolor_apps_48x48_mate-freecell.png \
	hicolor_apps_scalable_mate-freecell.svg \
	$(NULL)
endif # HAVE_HILDON

endif # BUILD_AISLERIOT

if BUILD_GLCHESS
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-glchess.png \
	hicolor_apps_22x22_mate-glchess.png \
	hicolor_apps_24x24_mate-glchess.png \
	hicolor_apps_32x32_mate-glchess.png \
	hicolor_apps_48x48_mate-glchess.png \
	hicolor_apps_scalable_mate-glchess.svg \
	$(NULL)
endif

if BUILD_GLINES
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-glines.png \
	hicolor_apps_22x22_mate-glines.png \
	hicolor_apps_24x24_mate-glines.png \
	hicolor_apps_32x32_mate-glines.png \
	hicolor_apps_48x48_mate-glines.png \
	hicolor_apps_scalable_mate-glines.svg \
	$(NULL)
endif

if BUILD_GNECT
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-gnect.png \
	hicolor_apps_22x22_mate-gnect.png \
	hicolor_apps_24x24_mate-gnect.png \
	hicolor_apps_32x32_mate-gnect.png \
	hicolor_apps_48x48_mate-gnect.png \
	hicolor_apps_scalable_mate-gnect.svg \
	$(NULL)
endif

if BUILD_GNIBBLES
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-gnibbles.png \
	hicolor_apps_22x22_mate-gnibbles.png \
	hicolor_apps_24x24_mate-gnibbles.png \
	hicolor_apps_32x32_mate-gnibbles.png \
	hicolor_apps_48x48_mate-gnibbles.png \
	hicolor_apps_scalable_mate-gnibbles.svg \
	$(NULL)
endif

if BUILD_GNOBOTS2
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-robots.png \
	hicolor_apps_22x22_mate-robots.png \
	hicolor_apps_24x24_mate-robots.png \
	hicolor_apps_32x32_mate-robots.png \
	hicolor_apps_48x48_mate-robots.png \
	hicolor_apps_scalable_mate-robots.svg \
	$(NULL)
endif

if BUILD_MATE_SUDOKU
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-sudoku.png \
	hicolor_apps_22x22_mate-sudoku.png \
	hicolor_apps_24x24_mate-sudoku.png \
	hicolor_apps_32x32_mate-sudoku.png \
	hicolor_apps_48x48_mate-sudoku.png \
	hicolor_apps_scalable_mate-sudoku.svg \
	$(NULL)
endif

if BUILD_QUADRAPASSEL
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-quadrapassel.png \
	hicolor_apps_22x22_mate-quadrapassel.png \
	hicolor_apps_24x24_mate-quadrapassel.png \
	hicolor_apps_32x32_mate-quadrapassel.png \
	hicolor_apps_48x48_mate-quadrapassel.png \
	hicolor_apps_scalable_mate-quadrapassel.svg \
	$(NULL)
endif

if BUILD_GNOMINE
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-mines.png \
	hicolor_apps_22x22_mate-mines.png \
	hicolor_apps_24x24_mate-mines.png \
	hicolor_apps_32x32_mate-mines.png \
	hicolor_apps_48x48_mate-mines.png \
	hicolor_apps_scalable_mate-mines.svg \
	$(NULL)
endif

if BUILD_GNOTRAVEX
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-tetravex.png \
	hicolor_apps_22x22_mate-tetravex.png \
	hicolor_apps_24x24_mate-tetravex.png \
	hicolor_apps_32x32_mate-tetravex.png \
	hicolor_apps_48x48_mate-tetravex.png \
	hicolor_apps_scalable_mate-tetravex.svg \
	$(NULL)
endif

if BUILD_GNOTSKI
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-klotski.png \
	hicolor_apps_22x22_mate-klotski.png \
	hicolor_apps_24x24_mate-klotski.png \
	hicolor_apps_32x32_mate-klotski.png \
	hicolor_apps_48x48_mate-klotski.png \
	hicolor_apps_scalable_mate-klotski.svg \
	$(NULL)
endif

if BUILD_GTALI
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-tali.png \
	hicolor_apps_22x22_mate-tali.png \
	hicolor_apps_24x24_mate-tali.png \
	hicolor_apps_32x32_mate-tali.png \
	hicolor_apps_48x48_mate-tali.png \
	hicolor_apps_scalable_mate-tali.svg \
	$(NULL)
endif

if BUILD_IAGNO
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-iagno.png \
	hicolor_apps_22x22_mate-iagno.png \
	hicolor_apps_24x24_mate-iagno.png \
	hicolor_apps_32x32_mate-iagno.png \
	hicolor_apps_48x48_mate-iagno.png \
	hicolor_apps_scalable_mate-iagno.svg \
	$(NULL)
endif

if BUILD_LIGHTSOFF
dist_noinst_DATA += \
	hicolor_apps_scalable_mate-lightsoff.svg \
	$(NULL)
endif

if BUILD_MAHJONGG
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-mahjongg.png \
	hicolor_apps_22x22_mate-mahjongg.png \
	hicolor_apps_24x24_mate-mahjongg.png \
	hicolor_apps_32x32_mate-mahjongg.png \
	hicolor_apps_48x48_mate-mahjongg.png \
	hicolor_apps_scalable_mate-mahjongg.svg \
	$(NULL)
endif

if BUILD_SWELL_FOOP
dist_noinst_DATA += \
	hicolor_apps_16x16_mate-swell-foop.png \
	hicolor_apps_22x22_mate-swell-foop.png \
	hicolor_apps_24x24_mate-swell-foop.png \
	hicolor_apps_32x32_mate-swell-foop.png \
	hicolor_apps_48x48_mate-swell-foop.png \
	hicolor_apps_scalable_mate-swell-foop.svg \
	$(NULL)
endif

private_icons = \
	hicolor_actions_16x16_cards-deal.png \
	hicolor_actions_22x22_cards-deal.png \
	hicolor_actions_24x24_cards-deal.png \
	hicolor_actions_32x32_cards-deal.png \
	hicolor_actions_48x48_cards-deal.png \
	hicolor_actions_scalable_cards-deal.svg \
	$(NULL)

if BUILD_GNOBOTS2
if !HAVE_HILDON
private_icons += \
	hicolor_actions_24x24_teleport.png \
	hicolor_actions_24x24_teleport-random.png \
	$(NULL)
endif # !HAVE_HILDON
endif # BUILD_GNOBOTS2

EXTRA_DIST = \
	$(private_icons)\
	$(NULL)

# The extra treatment for Hildon is necessary because hildon only looks for
# icons in the "hildon" context [https://bugs.maemo.org/show_bug.cgi?id=4766].

install-public-icons:
	for icon in $(dist_noinst_DATA); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		mkdir -p $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-private-icons:
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		$(mkdir_p) $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT; \
		$(INSTALL_DATA) $(srcdir)/$$icon $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-public-icons:
	-for icon in $(dist_noinst_DATA); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(datadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

uninstall-private-icons:
	for icon in $(private_icons); do \
		THEME=`echo $$icon | cut -d_ -f1`; \
		if test -n "@HAVE_HILDON_TRUE@"; then \
			CONTEXT=`echo $$icon | cut -d_ -f2`; \
		else \
			CONTEXT=hildon; \
		fi; \
		SIZE=`echo $$icon | cut -d_ -f3`; \
		ICONFILE=`echo $$icon | cut -d_ -f4`; \
		rm -f $(DESTDIR)$(pkgdatadir)/icons/$$THEME/$$SIZE/$$CONTEXT/$$ICONFILE; \
	done

install-data-local: install-public-icons install-private-icons
uninstall-local: uninstall-public-icons uninstall-private-icons

install-data-hook: update-icon-cache
uninstall-hook: update-icon-cache

gtk_update_icon_cache = gtk-update-icon-cache -f -t

update-icon-cache:
	@-if test -z "$(DESTDIR)"; then \
		echo "Updating Gtk icon cache."; \
		for theme in $(public_icons_themes); do \
			$(gtk_update_icon_cache) $(datadir)/icons/$$theme; \
		done; \
	else \
		echo "*** Icon cache not updated.  After (un)install, run this:"; \
		for theme in $(public_icons_themes); do \
			echo "***   $(gtk_update_icon_cache) $(datadir)/icons/$$theme"; \
		done; \
	fi

-include $(top_srcdir)/git.mk
