include $(top_srcdir)/mate-doc-utils.make

DOC_LINGUAS = ca cs da de el en_GB es eu fi fr it oc sr sr@latin sv

DOC_MODULE = gnect

DOC_ENTITIES = \
	network-games.xml \
	legal.xml

DOC_FIGURES = \
	figures/mainwindow.png \
	figures/tileset.png \
	figures/connect.png \
	figures/tables.png 

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
