pixmapdir = $(pkgdatadir)/gnect/pixmaps

pixmap_DATA = \
    tileset_50x50_sunspot.svg \
    tileset_50x50_catseyes.png \
    tileset_50x50_square.png \
    tileset_50x50_glassy.png \
    tileset_50x50_hcontrast.svg \
    tileset_50x50_hcinverse.svg \
    bg_grotty.jpg \
    bg_nightfall.jpg \
    bg_toplight.png

EXTRA_DIST = $(pixmap_DATA)

-include $(top_srcdir)/git.mk
