Pixmapdir = $(pkgdatadir)/gtali/pixmaps
Pixmap_DATA = \
	mate-dice-1.svg \
	mate-dice-2.svg \
	mate-dice-3.svg \
	mate-dice-4.svg \
	mate-dice-5.svg \
	mate-dice-6.svg \
	mate-dice-none.svg \
	kismet1.svg \
	kismet2.svg \
	kismet3.svg \
	kismet4.svg \
	kismet5.svg \
	kismet6.svg \
	kismet-none.svg

EXTRA_DIST = $(Pixmap_DATA)

-include $(top_srcdir)/git.mk
