include $(top_srcdir)/mate-doc-utils.make

DOC_LINGUAS = ca cs da el en_GB es eu fr it oc sr sr@latin sv de

DOC_MODULE = mahjongg

DOC_ENTITIES = \
	legal.xml

DOC_FIGURES = \
	figures/mahjongg.png \
	figures/no-move.png \
	figures/preferences.png \
	figures/toolbar.png

dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
